<resources>
    <string name="app_name">WSEN</string>

    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="add_video">Add video</string>
    <string name="logout">Log out</string>

    <string name="save">Save</string>
    <string name="surname">Lastname</string>
    <string name="name">Firstname</string>
    <string name="phone_number">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile_name">username</string>
    <string name="my_image">my image</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="create_title">Create title</string>
    <string name="_8942" translatable="false">⋮</string>
    <string name="edit_posts">Edit posts</string>
    <string name="delete_posts">Delete posts</string>
    <string name="delete">Delete</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_delete_this_post">Are you sure want to delete this post?</string>
    <string name="warning">Warning!</string>
    <string name="you_can_t_change_your_picture_if_you_don_t_allow_it">You can\'t change your picture if you don\'t allow it!</string>
    <string name="you_don_t_have_any_posts_yet">You don\'t have \nany posts yet</string>
    <string name="some_error">\"Some Error! \"</string>
    <string name="select_vide_from_gallery">Select video from gallery</string>
    <string name="record_video_from_camera">Record video from camera</string>
    <string name="spam">Spam</string>
    <string name="report">Report</string>
    <string name="username">Username</string>
    <string name="create_video_time" translatable="false">/~/~/</string>
    <string name="tittle">Tittle</string>
    <string name="address">Address:</string>
    <string name="add">Submit</string>
    <string name="nol" translatable="false">0</string>
    <string name="likes">Likes</string>
    <string name="year">Year</string>
    <string name="months_date">Months date</string>
    <string name="edit">Edit</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_enter_any_additional_details_relevant_to_nyour_report">Please enter any additional details relevant to \nyour report</string>
    <string name="additional_details">Additional details…</string>
    <string name="send_report">Send Report</string>
    <string name="status">Status</string>
    <string name="waiting">Waiting</string>
    <string name="finished">Finished</string>
    <string name="english">English</string>
    <string name="lang">Language</string>
    <string name="uzbek">Uzbek</string>
    <string name="home">Home</string>
    <string name="invite_fiends">Invite fiends</string>
    <string name="rate_app">Rate App</string>
    <string name="offline_mode">Offline mode</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="available_services_in_offline_mode">Available services in offline mode</string>
    <string name="repeat">Repeat</string>
    <string name="wsen" translatable="false">WSEN</string>

    <string name="errorTextEmailExist">user with this Email address already exists.</string>
    <string name="errorTextUsernameExist" translatable="false">A user with that username already exists.</string>
    <string name="errorTextLoginOrPassword">Login yoki parol notogri!</string>
    <string name="errorTextLoginOrPassword2">Xatolik yuzaga keldi</string>
    <string name="internet_disconnected">Tarmoqqa ulanmagan</string>
    <string name="error_phone_not_contains_998">+998 kiritilishi zarur</string>
    <string name="all_videos">All Videos</string>
    <string name="my_videos">My Videos</string>
    <string name="you_tube_video_link" translatable="false">https://www.youtube.com/watch?v=aTrWtFR_FrQ</string>
    <string name="telegram_kanal_link" translatable="false">https://t.me/ecology_problems</string>
    <string name="welcome_wsen" translatable="false">Welcome WSEN</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="error_reg_login">Error in Registration or Login</string>
    <string name="title">Title</string>
    <string name="begin">Begin</string>
    <string name="water" translatable="false">Water</string>
    <string name="sun" translatable="false">Sun</string>
    <string name="earth" translatable="false">Earth</string>
    <string name="nature" translatable="false">Nature</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="forget_password">Forget password</string>
    <string name="favorite">Favorite</string>
    <string name="per_error">Permission Error</string>
    <string name="fav_videos">Favourite videos</string>
    <string name="contribute_videos">Contribute videos</string>
    <string name="contribute">My contributors</string>
    <string name="not_contributed">You have not contributed\nanything yet</string>
    <string name="yes">Ha</string>
    <string name="exit_app">Do you really want to exit the app?</string>
    <string name="firstname">Firstname</string>
    <string name="video_success_add">The video was successfully added</string>
    <string name="fill_our_this_fields">Fill out this fields</string>
    <string name="succed_delete_post">This post was successfully deleted</string>
    <string name="contributors">Contributors</string>
    <string name="number_nof_volunteers">Number\nof volunteers</string>
    <string name="percentage_of_work_done_nby_volunteers">Percentage of work done\nby volunteers</string>
    <string name="percentage_of_work_not_completed">Percentage of work not completed</string>
</resources>