<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.pages.ProfilePage">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tabiat"
                android:layout_marginTop="25dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/main_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/profile_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/profile_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_img" />

            <ImageView
                android:id="@+id/add_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/pluss"
                android:contentDescription="@string/my_image"
                app:layout_constraintTop_toTopOf="@id/profile_img"
                app:layout_constraintBottom_toBottomOf="@id/profile_img"
                app:layout_constraintRight_toRightOf="@id/profile_img"
                app:layout_constraintLeft_toLeftOf="@id/profile_img"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintVertical_bias="1" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingVertical="5dp"
                app:layout_constraintTop_toBottomOf="@id/profile_name_tv">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="25dp"
                    app:boxBackgroundMode="outline"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="25dp"
                    app:boxBackgroundMode="outline"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sure_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/surname"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="25dp"
                    app:boxBackgroundMode="outline"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_et"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="25dp"
                    app:boxBackgroundMode="outline"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:enabled="false"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:boxBackgroundMode="outline"
                    android:visibility="gone"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="25dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="25dp"
                    android:visibility="gone"
                    app:boxBackgroundMode="outline"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_pager_shape"
                        android:hint="@string/confirm_password"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColorHint="#757575" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="false"
                app:cardCornerRadius="20sp"
                app:cardBackgroundColor="@color/main_green"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/ll">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>